--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -7,7 +7,7 @@
 
     <div class="meta">
         <img src="{{idea.user.image_url}}" alt="avatar for {{%idea.user%}}" width="25" height="25" class="avatar" />
-        <span class="author">thought up by {{idea.user.nickname}} days ago</span>
+        <span class="author">by {{idea.user.nickname}} {{ idea.created_at | human_time_distance }} ago</span>
         <div class="actions">
             <ul>
                 <li class="first"><a href="{{idea.like_link}}" data-method="post" class="action-like">like <strong>({{%idea.likes%}})</strong></a></li>
