--- a/public/stylesheets/ideas.less
+++ b/public/stylesheets/ideas.less
@@ -98,6 +98,7 @@ a:hover { text-decoration: none; color: lighten(@complement, 15%); }
 textarea { resize: vertical; }
 
 #wrapper {
+    width: 520px;
     float: left; position: relative;
     background: @white;
     padding: 30px;
@@ -372,7 +373,10 @@ h1.show {
 }
 
 
-
+.empty { float: left; position: relative; display: block; width: 100%;color: @gray; text-align: center; 
+  h1 { font-size: 2em; margin: 0 0 5px 0; color: @gray; }
+  p { margin: 0; padding: 0; }
+}
 
 .alert-message {
     float: left;
