--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -77,7 +77,7 @@
               </div>
             {% endif %}
 
-            <div id="user-actions">
+            <div id="user-actions" class="{% if current_user %}loggedin{% endif %}">
                 {% if current_user %}
                 <!-- Logged in user bar -->
                 <div id="user-bar">
@@ -99,7 +99,7 @@
                     <li class="facebook"><a href="/auth/facebook" class="button"><span></span>Facebook</a></li>
                 </ul>
 
-                <div class="alert-message tip">
+                <div class="alert-message tip login-prompt">
                     <i></i><p>login with twitter or facebook to add new or like ideas</p>
                 </div>
                 {% endif %}
@@ -125,6 +125,15 @@
         <div id="wrapper">
           <!-- This will be replaced with the template content -->
           {{ yield }}
+
+        <!-- Share page -->
+        <div id="share-page">
+        <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
+        <a class="addthis_button_tweet" tw:count="vertical"></a>
+        <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
+        </div>
+        <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4f0c4de422db2f2f"></script>
+
         </div>
 
         <!-- Footer -->
@@ -132,15 +141,6 @@
           <p>{{ space.title }} is powered by <a href="http://rusic.com">Rusic</a></p>
         </footer>
 
-    </div>
-
-    <!-- Share space button -->
-    <div id="share-space">
-        <span class="share-text">share this page</span>
-        <ul class="buttons">
-            <li><a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="RusicHQ">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
-            <li><iframe src="//www.facebook.com/plugins/like.php?href&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=126857104082710" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe></li>
-        </ul>
     </div>
 
 </body>
