--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -3,57 +3,48 @@
   {% for idea in space.ideas %}
     <!-- ENTRY -->
     <div class="entry">
-        <h1 class="show">{{ idea.title }}</h1>
-
-        <div class="slide">
-            <div class="content">
-                {{ idea.content | markdown }}
-            </div>
-            <a href="{{idea.permalink}}" title="permalink for {{%idea.title%}}" class="btn">go to page for this idea</a>
+      <h1 class="show">{{ idea.title }}</h1>
+      <div class="slide">
+        <div class="content">
+        {{ idea.content | markdown }}
         </div>
+        <a href="{{idea.permalink}}" title="permalink for {{%idea.title%}}" class="btn">go to page for this idea</a>
+      </div>
 
-        {% if idea.interested_users != empty %}
-            <div class="interest">
-                <h3>people interested in this:</h3>
-                <ul class="interested-people">
-                  {% for user in idea.interested_users %}
-                      <li>
-                        <a href="{{ user.profile_url }}" title="{{ user.nickname }}'s {{ user.provider }} profile">
-                          <img src="{{ user.image_url }}" alt="{{ user.nickname }}" width="40" height="40" class="avatar" />
-                        </a>
-                      </li>
-                  {% endfor %}
-                </ul>
-            </div>
-            {% endif %}
-
-        <div class="meta">
-            <img src="{{idea.user.image_url}}" alt="avatar for {{user.nickname}}" width="25" height="25" class="avatar" />
-            <span class="author">
-              by {{ idea.user.nickname }}
-              {{ idea.created_at | human_time_distance }} ago
-            </span>
-            <div class="actions">
-                <ul>
-                    <li class="first"><a href="{{ idea.like_link }}" data-method="post" class="action-like">like <strong>({{ idea.likes }})</strong></a></li>
-                    <li class="last"><a href="{{ idea.permalink }}#comments" title="link to comments for {{idea.title}}" class="action-discuss">discuss <strong>({{ idea.comments_count }})</strong></a></li>
-                </ul>
-            </div>
-        </div>
-
-        <a href="{{idea.like_link}}" data-method="post" class="comment-count">{{ idea.likes }}<br /><span class="like-label">likes<span></a>
+    {% if idea.interested_users != empty %}
+    <div class="interest">
+      <h3>people interested in this:</h3>
+      <ul class="interested-people">
+      {% for user in idea.interested_users %}
+        <li><a href="{{ user.profile_url }}" title="{{ user.nickname }}'s {{ user.provider }} profile"><img src="{{ user.image_url }}" alt="{{ user.nickname }}" width="40" height="40" class="avatar" /></a></li>
+      {% endfor %}
+      </ul>
     </div>
+    {% endif %}
+
+    <div class="meta">
+      <img src="{{idea.user.image_url}}" alt="avatar for {{user.nickname}}" width="25" height="25" class="avatar" />
+      <span class="author">by {{ idea.user.nickname }} {{ idea.created_at | human_time_distance }} ago</span>
+      <div class="actions">
+        <ul>
+          <li class="first"><a href="{{ idea.like_link }}" data-method="post" class="action-like">like <strong>({{ idea.likes }})</strong></a></li>
+          <li class="last"><a href="{{ idea.permalink }}#comments" title="link to comments for {{idea.title}}" class="action-discuss">discuss <strong>({{ idea.comments_count }})</strong></a></li>
+        </ul>
+      </div>
+    </div>
+    <span class="comment-count"><a href="{{idea.like_link}}" data-method="post">{{ idea.likes }}</a><br /><span class="like-label">likes</span></span>
+    </div>
+
   {% endfor %}
-
-{% else %}
-
-<div class="empty">
-  <h1>Nobody has posted anything here yet!</h1>
-  {% if current_user %}
-  <p>be the first to add an idea by using the 'add a new idea' button</p>
   {% else %}
-  <p>login with twitter or facebook to be the first to add an idea</p>
-  {% endif %}
-</div>
+  
+  <div class="empty">
+    <h1>Nobody has posted anything here yet!</h1>
+    {% if current_user %}
+    <p>be the first to add an idea by using the 'add a new idea' button</p>
+    {% else %}
+    <p>login with twitter or facebook to be the first to add an idea</p>
+    {% endif %}
+  </div>
 
 {% endif %}
