--- a/public/stylesheets/ideas.less
+++ b/public/stylesheets/ideas.less
@@ -321,7 +321,7 @@ span.countdown_row {
   .countdown-text { width: 100%; float: left; position: relative; text-align: center; }
 
   .alert-message.tip { width: auto; position: absolute; padding: 6px 10px 8px 10px; top: 50px; right: -20px; z-index: 999; .close { color: #000; }
-      i { width: 17px; height: 10px; background: url(/images/alert-point.png) no-repeat; display: block; position: absolute; right: 115px; top: -10px; }}
+      i { width: 17px; height: 10px; background: url(../images/alert-point.png) no-repeat; display: block; position: absolute; right: 115px; top: -10px; }}
   .alert-message.tip p { font-size: 12px; line-height: 13px; color: @gray; text-align: left; margin-top: 2px; *padding-top: 5px; *font-size: 12px; text-align: center; }
 
 
