--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -1,5 +1,5 @@
 {% if env == "development" %}
-  {% assign asset_url="http://localhost:8080" %}
+  {% assign asset_url="https://s3.amazonaws.com/rusic-ideas-theme" %}
 {% else %}
   {% assign asset_url="https://s3.amazonaws.com/rusic-ideas-theme" %}
 {% endif %}
@@ -43,6 +43,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
     {{ content_for_header }}
     <script src="/assets/jquery.countdown.min.js"></script>
+    <script src="{{ asset_url }}/javascripts/jquery.validate.min.js"></script>
     <script src="{{ asset_url }}/javascripts/scripts.js"></script>
 
     <!-- Fav & touch icons -->
@@ -121,8 +122,8 @@
             <div id="new-idea">
                 <h3>Add a new idea...</h3>
                 <fieldset>
-                    <input class="span4" id="idea_title" name="idea[title]" type="text" placeholder="Idea title">
-                    <div class="input"><textarea id="idea_content" name="idea[content]" rows="3" placeholder="Your idea"></textarea></div>
+                    <input class="span4 required" id="idea_title" name="idea[title]" type="text" placeholder="Idea title">
+                    <div class="input"><textarea id="idea_content" name="idea[content]" rows="3" placeholder="Your idea" class="required"></textarea></div>
                     <div class="checkarea"><input type="checkbox" name="idea[should_post_to_social]" value="1" checked />share this idea to {{ current_user.provider }}?</div>
                     <input type="submit" value="add idea" class="btn primary submit" />
                 </fieldset>
