--- a/public/stylesheets/ideas.css
+++ b/public/stylesheets/ideas.css
@@ -2817,10 +2817,11 @@ body.ideas-show .meta {
 }
 #new-idea fieldset input {
   width: 510px;
-  margin: 0 0 10px 0;
+  margin: 0;
 }
 #new-idea fieldset textarea {
   width: 510px;
+  margin-top: 10px;
 }
 #new-idea fieldset .submit {
   float: right;
@@ -2885,9 +2886,9 @@ time#expires-at span.countdown_row span.countdown_section span.countdown_amount 
   -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.6);
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.6);
-  background-image: -moz-linear-gradient(top, #383838, black);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #383838), color-stop(1, black));
-  text-shadow: 0 -1px 1px black;
+  background-image: -moz-linear-gradient(top, #383838, #000000);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #383838), color-stop(1, #000000));
+  text-shadow: 0 -1px 1px #000000;
   min-width: 44px;
   text-align: center;
   margin-bottom: 5px;
@@ -3216,4 +3217,15 @@ h1.show {
   -webkit-box-shadow: inset 0 0 4px #adadad;
   -moz-box-shadow: inset 0 0 4px #adadad;
   box-shadow: inset 0 0 4px #adadad;
+}
+label.error {
+  color: #d4903b;
+  font-size: .9em;
+  margin: 2px 0 0 0;
+  padding: 0;
+  float: left;
+  position: relative;
+  clear: left;
+  width: 100%;
+  text-align: left;
 }
