--- a/public/stylesheets/ideas.less
+++ b/public/stylesheets/ideas.less
@@ -226,8 +226,8 @@ body.ideas-show {
     margin: 0 0 20px 0; float: left; position: relative; clear: left; padding: 0 0 20px 0; background: darken(@baseColor, 10%); border: 1px solid darken(@baseColor, 15%); box-shadow: (0 0 1px rgba(255,255,255,.3)); border-radius: (4px);
     h3 { *width: 450px; margin: 20px 30px 0 30px; padding: 0; line-height: 1em; font-size: 1.5em; font-weight: normal; color: lighten(@complement, 15%); }
     fieldset { margin: 0 30px 0 30px;
-        input { width: 510px; margin: 0 0 10px 0;  }
-        textarea { width: 510px; }
+        input { width: 510px; margin: 0;  }
+        textarea { width: 510px; margin-top: 10px; }
         .submit { float: right; position: relative; margin: 8px 0 0 0; }
     }
 }
@@ -411,3 +411,14 @@ top: -38px;
         &.active, &:hover { .box-shadow(inset 0 0 4px darken(@grayLight, 7%); }}}}
 }
 
+label.error {
+  color: lighten(@complement, 15%);
+  font-size: .9em;
+  margin: 2px 0 0 0;
+  padding: 0;
+  float: left;
+  position: relative;
+  clear: left;
+  width: 100%;
+  text-align: left;
+}
