liked state for actions menu

--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -11,9 +11,9 @@
         <div class="actions">
             <ul>
                 {% if idea.liked? %}
-                <li class="first"><span class="like">like <strong>({{ idea.likes }})</span></li>
+                <li class="first"><span class="action-like on">like <strong>({{ idea.likes }})</span></li>
                 {% else %}
-                <li class="first"><a href="{{idea.like_link}}" title="like action for {{idea.title}}" data-method="post" class="like">like <strong>({{ idea.likes }})</a></li>
+                <li class="first"><a href="{{idea.like_link}}" title="like action for {{idea.title}}" data-method="post" class="action-like">like <strong>({{ idea.likes }})</a></li>
                 {% endif %}
                 <li class="last"><a href="#comments" title="link to comments for {{idea.title}}" class="action-discuss">discuss <strong>({{ idea.comments_count }})</strong></a></li>
             </ul>
