--- a/public/stylesheets/ideas.css
+++ b/public/stylesheets/ideas.css
@@ -2727,6 +2727,14 @@ footer p {
 .actions .action-discuss:hover {
   background: url(../images/button-discuss-hover.png) 0 3px no-repeat;
 }
+.actions span.on {
+  *height: 30px;
+  float: left;
+  position: relative;
+  margin: 5px 10px;
+  padding-left: 22px;
+  background: url(../images/button-like-hover.png) 0 2px no-repeat;
+}
 #user-bar {
   float: left;
   position: relative;
