--- a/public/stylesheets/ideas.less
+++ b/public/stylesheets/ideas.less
@@ -192,6 +192,7 @@ footer {
     &:hover { background: url(../images/button-like-hover.png) 0 2px no-repeat; }}
     .action-discuss { background: url(../images/button-discuss.png) 0 3px no-repeat;
     &:hover { background: url(../images/button-discuss-hover.png) 0 3px no-repeat; }}
+    span.on { *height: 30px; float: left; position: relative; margin: 5px 10px; padding-left: 22px; background: url(../images/button-like-hover.png) 0 2px no-repeat; }
 }
 
 #user-bar {
