--- a/public/stylesheets/ideas.less
+++ b/public/stylesheets/ideas.less
@@ -410,6 +410,7 @@ top: -38px;
         &.mine { background: url(../images/icon-mine.png) 6px center no-repeat; } 
         &.popular { background: url(../images/icon-popular.png) 6px center no-repeat; }
         &.active, &:hover { .box-shadow(inset 0 0 4px darken(@grayLight, 7%); }}}}
+  .rss { float: right; position: relative; padding-left: 20px; background: url(../images/icon-feed.png) 6px center no-repeat; }
 }
 
 label.error {
