--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -1,5 +1,5 @@
 {% if env == "development" %}
-  {% assign asset_url="https://s3.amazonaws.com/rusic-ideas-theme" %}
+  {% assign asset_url="http://localhost:8080" %}
 {% else %}
   {% assign asset_url="https://s3.amazonaws.com/rusic-ideas-theme" %}
 {% endif %}
