small fix for header

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -36,7 +36,7 @@
     <meta property="og:description" content="{{space.summary}}" />
     {% endif %}
 
-    <!-- Less -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="{{ asset_url }}/stylesheets/ideas.css">
 
     <!-- Scripts -->
